[project]
name = "fiberoripy"
version = "1.1.4"
description = "Fiber orientation models and closures"
authors = [{name="Nils Meyer", email = "nils.meyer@uni-a.de"}, {name="Constantin Krauß"}, {name="Louis Schreyer"}, {name="Julian Karl Bauer"}]
license = {file = "LICENSE"}
readme = "README.md"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.black]
line-length = 79
